# resume-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_VERIFIED_GRADE_A.md  MAINTENANCE.md  Makefile  PRODUCTION_READINESS.md  README.md  SECURITY.md  TODO.md  app.py  config.py  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  setup_multiuser.py  test_app.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  .env.production  .env.staging  Dockerfile  Dockerfile.staging  MIGRATIONS.md  TEST_COVERAGE_REPORT.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260123_000000_0001_initial_schema.py  a93ef862abc0_fix_profile_user_id_not_null.py  d12b0d5a45ef_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  audit.py  auth.py  rate_limiter.py  security.py  sentry_context.py
backend/app/models/: __init__.py  career_journal.py  cover_letter.py  job_alert.py  job_application.py  job_filters.py  profile.py  resume.py  user.py
backend/app/routers/: __init__.py  ai.py  analytics.py  auth.py  career_journal.py  cover_letters.py  job_alerts.py  job_filters.py  job_import.py  jobs.py  profile.py  resumes.py  scheduler.py  websocket.py
backend/app/schemas/: __init__.py  ai.py  ats.py  career_journal.py  cover_letter.py  job.py  job_alert.py  job_filters.py  job_import.py  pagination.py  profile.py  resume.py  scheduler.py  user.py
backend/app/services/: __init__.py  ats_analyzer.py  file_parser.py  job_alerts.py  job_importer.py  job_scraper.py  llm_service.py  resume_analyzer.py  scheduler.py
backend/load-tests/config/: options.js  thresholds.json
backend/scripts/: __init__.py
backend/scripts/backup/: __init__.py
backend/tests/: conftest.py  test_ai.py  test_analytics.py  test_ats_analyzer.py  test_audit_middleware.py  test_auth.py  test_auth_integration.py  test_career_journal.py  test_cover_letters.py  test_integration_auth_flow.py  test_integration_job_workflow.py  test_job_alerts.py  test_jobs.py  test_jobs_integration.py  test_llm_service.py  test_middleware.py  test_profile.py  test_resumes.py  test_resumes_integration.py
browser-extension/: package.json  tsconfig.json  vite.config.ts
deploy/: init-db.sql
deploy/backup/: backup.sh  crontab  docker-compose.backup.yml
deploy/nginx/: staging.conf
deploy/ssl/: .gitkeep
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content/: content.js  detector.js
extension/content/fillers/: generic.js  greenhouse.js  lever.js  linkedin.js  workday.js
extension/icons/: ICON_GENERATION.md
extension/popup/: popup.css  popup.html  popup.js
frontend/: .env.example  .env.production  .env.staging  .eslintrc.json  Dockerfile  LABEL_FIX_GUIDE.md  env.d.ts  eslint.config.mjs  fix-labels.sh  next-env.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.tsx
frontend/e2e/: README.md  auth.spec.ts  ci-example.yml  helpers.ts  jobs.spec.ts  navigation.spec.ts  resumes.spec.ts  smoke.spec.ts
frontend/src/__tests__/: test-utils.tsx
frontend/src/__tests__/components/: AuthProvider.test.tsx
frontend/src/__tests__/components/jobs/: AddEventModal.test.tsx  JobFormModal.test.tsx  KanbanBoard.test.tsx  (+3 more)
frontend/src/__tests__/pages/: home.test.tsx  login.test.tsx  register.test.tsx
frontend/src/app/: DashboardClient.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/ai-assistant/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/career/: page.tsx
frontend/src/app/cover-letters/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/interview/: page.tsx
frontend/src/app/jobs/: JobsPageClient.tsx  page.tsx
frontend/src/app/login/: LoginPageClient.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: RegisterPageClient.tsx  page.tsx
frontend/src/app/resumes/: ResumesPageClient.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AuthProvider.tsx  ErrorBoundary.tsx  ErrorFallback.tsx  Navbar.tsx  OfflineIndicator.tsx  RootErrorBoundary.tsx  WebVitalsDebug.tsx  WebVitalsLoader.tsx  WebVitalsProvider.tsx
frontend/src/components/jobs/: AddEventModal.tsx  AnalyticsTab.tsx  JobFormModal.tsx  KanbanBoard.tsx  KanbanColumn.tsx  ListView.tsx  SortableJobCard.tsx  TimelineTab.tsx  index.ts
frontend/src/components/ui/: EmptyState.tsx  LoadingStates.tsx  Skeleton.tsx  index.ts
frontend/src/hooks/: index.ts  useNetworkStatus.ts  useOfflineQueue.ts  useVirtualList.ts  useWebVitals.ts
frontend/src/lib/: api.ts  auth.ts  fetchWithRetry.ts  utils.ts  webVitals.ts
frontend/src/lib/jobs/: constants.ts  index.ts  utils.ts
frontend/src/types/: index.ts
models/: __init__.py  auth_database.py  database.py
pages/: 0_Login.py  10_Keyword_Gap_Analysis.py  11_Interview_Timeline.py  12_Resume_Templates.py  13_Email_Templates.py  14_Job_Match_Scorer.py  1_Resume_Optimizer.py  2_Job_Tracker.py  3_Cover_Letter.py  4_Career_Journal.py  5_Profile.py  6_Interview_Prep.py  7_Salary_Negotiation.py  8_Health_Check.py  9_AI_Assistant.py
scripts/: backup_databases.py  database_health_check.py  test_multiuser.py  test_rate_limiting.py
services/: __init__.py  llm_service.py  resume_analyzer.py
test_files/: corrupted.txt  job_description.docx  job_description.txt  resume.docx  resume.txt  resume_special_chars.txt
utils/: __init__.py  audit_logger.py  auth.py  cache.py  error_handler.py  file_parser.py  input_sanitizer.py  page_auth.py  password_validator.py  rate_limiter.py  rate_limiter_auth.py  ui_helpers.py  validators.py
(+9 files in other folders)
