[project]
name = "resume-ai"
version = "1.0.0"
description = "AI-powered resume analysis and optimization tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "openai",
    "streamlit",
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-core",
    # LLM Providers
    "langchain-openai",
    # File parsing
    "PyPDF2",
    "python-docx",
    # Authentication & Security
    "bcrypt",
]

[dependency-groups]
dev = [
    "black>=23.12.0",
    "pylint>=3.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | build
  | dist
  | data
  | backups
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "data/*"]

[tool.pytest]
testpaths = ["scripts"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bcrypt.*"
ignore_missing_imports = true
